(Format: Year/Month/Day)
Changes for 0.9.9:
*04/03/13:
  * Fixed so it compiles in cygwin (Henrik)
    I18n.hh
*04/03/11:
  * fbsetbg updates: (Han)
    * Check if Esetroot was linked with Imlib
    * Add support for gxmessage (looks much nicer)
    * Send all messages to xmessage/gxmessage because test -t is also true
      when startx is used.
    * Add compat note for $UID
  * fbsetbg: special Esetroot check and message improvements (Han)
*04/03/08:
  * Fix focus passing when grouping (Simon)
    Window.cc
  * Fix receipt of _NET_WM_DESKTOP client messages (Simon)
    - fixes xmms "show on all desktops" not working
    Ewmh.cc
*04/03/03:
  * Fix update of keys on keymap change (Simon)
    fluxbox.cc
  * Fix outline moving dropping on source workspace made window 
    disappear [we now explicitly don't unfocus a moving window] (Simon) 
    Window.cc fluxbox.cc
  * Updated finnish locales for fluxbox-generate_menu (Thanks Lauri Hakkarainen)
*04/03/02:
  * fluxbox-generate_menu changes: (Han)
    * Updated German locales from Mathias Gumz
    * More firefox support.
    * Updated compat-notes.
*04/02/28:
  * Improved rendering speed when changing workspace or creating new window (Henrik)
    FbWinFrame.cc
  * Fixed bug in StringUtil::removeTrailingWhitespace (Thanks Mathias Gumz)
    StringUtil.cc
  * Fixed infinite loop in fbrun (Thanks Mathias Gumz)
    FbRun.cc
  * Added improved checking for compiler and compiler version (Henrik)
    version.h.in, main.cc
*04/02/26:
  * Improved transparent rendering speed in titlebar (Henrik)
    FbWinFrame.cc
  * Improved transparent rendering speed in Menu (Henrik)
    Menu.cc
  * Added CompareEqual class template that helps comparing
    accessor functions with PODs for containers
    CompareEqual.hh
*04/02/25:
  * Fixed cycling in tab completion for fbrun (Thanks Mathias Gumz)
    FbRun.cc
*04/02/20:
  * Added SendToNextWorkspace and SendToPrevWorkspace actions (Thanks Mathias Gumz)