@@ -1,5 +1,9 @@
 (Format: Year/Month/Day)
 Changes for 0.9.9:
+*04/03/15:
+  * bug in placeWindow caused spinning with screens higher than width
+    e.g. vertical xinerama   (Simon)
+    Workspace.cc
 *04/03/13:
   * Fixed so it compiles in cygwin (Henrik)
     I18n.hh
